--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -170,7 +170,7 @@ $h6-font-size:                $font-size-base * .625 !default;
 //
 // Define common padding and border radius sizes and more.
 
-$border-width:                1px !default;
+$border-width:                2px !default;
 $border-widths: (
 	1: 1px,
 	2: 2px,
@@ -603,8 +603,8 @@ $dropdown-item-padding-x:           $spacer * 0.5 !default;
 $dropdown-header-color:             $gray-600 !default;
 $dropdown-header-padding:           $dropdown-padding-y $dropdown-item-padding-x !default;
 
-$dropdown-dark-color:               #f4f4f4 !default;
-$dropdown-dark-bg:                  $gray-800 !default;
+$dropdown-dark-color:               #aaaaaa !default;
+$dropdown-dark-bg:                  rgb(20, 20, 20) !default;
 $dropdown-dark-border-color:        $dropdown-border-color !default;
 $dropdown-dark-divider-bg:          $dropdown-divider-bg !default;
 $dropdown-dark-box-shadow:          null !default;
@@ -626,11 +626,11 @@ $pagination-padding-y-lg:           .75rem !default;
 $pagination-padding-x-lg:           1.5rem !default;
 
 $pagination-color:                  $link-color !default;
-$pagination-bg:                     $dark !default;
+$pagination-bg:                     $white !default;
 $pagination-border-width:           $border-width !default;
-$pagination-border-radius:          $border-radius !default;
+$pagination-border-radius:          $border-radius-sm !default;
 $pagination-margin-start:           -$pagination-border-width !default;
-$pagination-border-color:           #4a4a4a !default;
+$pagination-border-color:           $gray-300 !default;
 
 $pagination-focus-color:            $link-hover-color !default;
 $pagination-focus-bg:               $gray-200 !default;
@@ -641,13 +641,13 @@ $pagination-hover-color:            $link-hover-color !default;
 $pagination-hover-bg:               $gray-200 !default;
 $pagination-hover-border-color:     $gray-300 !default;
 
-$pagination-active-color:           $primary !default;
+$pagination-active-color:           $white !default;
 $pagination-active-bg:              $component-active-bg !default;
 $pagination-active-border-color:    $pagination-active-bg !default;
 
-$pagination-disabled-color:         $gray-700 !default;
+$pagination-disabled-color:         $gray-600 !default;
 $pagination-disabled-bg:            $white !default;
-$pagination-disabled-border-color:  #242424 !default;
+$pagination-disabled-border-color:  $gray-500 !default;
 
 $pagination-transition:              color .3s ease-in-out, background-color .3s ease-in-out, border-color .3s ease-in-out, box-shadow .3s ease-in-out !default;
 
