🎨 (style/variabes): Change value of button font variable

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -329,7 +329,7 @@ $mark-bg:                     #fcf8e3 !default;
 
 $input-btn-padding-y:         .375rem !default;
 $input-btn-padding-x:         .75rem !default;
-$input-btn-font-family:       null !default;
+$input-btn-font-family:       "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace !default;
 $input-btn-font-size:         $font-size-sm !default;
 $input-btn-line-height:       $line-height-base !default;
 
