--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/mixins";
+@import "bootstrap/scss/mixins";
 
 @mixin bg-gradient-variant($state, $color) {
 	.bg-gradient-#{$state} {
