--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -693,4 +693,4 @@ $btn-close-focus-opacity:    1 !default;
 $btn-close-disabled-opacity: .25 !default;
 $btn-close-white-filter:     invert(1) grayscale(100%) brightness(200%) !default;
 
-@import "~bootstrap/scss/variables";
+@import "bootstrap/scss/variables";
