--- a/src/assets/scss/bedrock.scss
+++ b/src/assets/scss/bedrock.scss
@@ -1,30 +1,30 @@
-@import "~bootstrap/scss/functions";
+@import "bootstrap/scss/functions";
 @import "variables";
-@import "~bootstrap/scss/maps";
+@import "bootstrap/scss/maps";
 @import "mixins";
 @import "utilities";
-@import "~bootstrap/scss/root";
+@import "bootstrap/scss/root";
 
 @import "reboot";
-@import "~bootstrap/scss/type";
-@import "~bootstrap/scss/images";
-@import "~bootstrap/scss/containers";
-@import "~bootstrap/scss/grid";
-@import "~bootstrap/scss/forms";
+@import "bootstrap/scss/type";
+@import "bootstrap/scss/images";
+@import "bootstrap/scss/containers";
+@import "bootstrap/scss/grid";
+@import "bootstrap/scss/forms";
 @import "components/buttons";
-@import "~bootstrap/scss/transitions";
-@import "~bootstrap/scss/dropdown";
-@import "~bootstrap/scss/button-group";
-@import "~bootstrap/scss/nav";
-@import "~bootstrap/scss/navbar";
-@import "~bootstrap/scss/card";
-@import "~bootstrap/scss/pagination";
-@import "~bootstrap/scss/list-group";
-@import "~bootstrap/scss/placeholders";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/dropdown";
+@import "bootstrap/scss/button-group";
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/navbar";
+@import "bootstrap/scss/card";
+@import "bootstrap/scss/pagination";
+@import "bootstrap/scss/list-group";
+@import "bootstrap/scss/placeholders";
 
 @import "plugins/masonry";
 @import "plugins/photoswipe";
 
-@import "~bootstrap/scss/helpers";
+@import "bootstrap/scss/helpers";
 
-@import "~bootstrap/scss/utilities/api";
+@import "bootstrap/scss/utilities/api";
