🎨 (style): Added bootstrap variables-dark used for dark-mode

--- a/src/assets/scss/bedrock.scss
+++ b/src/assets/scss/bedrock.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/scss/functions";
 @import "variables";
+@import "variables-dark";
 @import "bootstrap/scss/maps";
 @import "mixins";
 @import "utilities";
