--- a/src/assets/scss/bedrock.scss
+++ b/src/assets/scss/bedrock.scss
@@ -20,6 +20,7 @@
 @import "bootstrap/scss/navbar";
 @import "bootstrap/scss/card";
 @import "bootstrap/scss/pagination";
+@import "bootstrap/scss/alert";
 @import "bootstrap/scss/list-group";
 @import "bootstrap/scss/placeholders";
 
