--- a/src/assets/scss/plugins/_photoswipe.scss
+++ b/src/assets/scss/plugins/_photoswipe.scss
@@ -8,7 +8,7 @@
 	border-radius: 0.15rem;
 	bottom: 16px;
 	color: #fff;
-	font-size: 16px;
+	font-size: 1em;
 	left: 50%;
 	max-width: 300px;
 	padding: 2px 8px;
