--- a/src/assets/scss/bedrock.scss
+++ b/src/assets/scss/bedrock.scss
@@ -19,6 +19,7 @@
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/navbar";
 @import "bootstrap/scss/card";
+@import "bootstrap/scss/breadcrumb";
 @import "bootstrap/scss/pagination";
 @import "bootstrap/scss/alert";
 @import "bootstrap/scss/list-group";
