--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -51,8 +51,7 @@ $colors: (
 	"teal":       $teal,
 	"cyan":       $cyan,
 	"white":      $white,
-	"gray":       $gray-100,
-	"gray-dark":  $gray-900
+	"gray":       $gray-100
 ) !default;
 
 $primary:       #1b1b1b !default;
@@ -167,7 +166,6 @@ $hr-color:                    #555 !default;
 
 $input-btn-padding-y:         .375rem !default;
 $input-btn-padding-x:         .75rem !default;
-$input-btn-font-family:       var(--#{$prefix}font-monospace) !default;
 $input-btn-font-size:         $font-size-sm !default;
 
 // Buttons
@@ -222,24 +220,6 @@ $dropdown-dark-bg:                  rgb(20, 20, 20) !default;
 // Pagination
 
 $pagination-transition:              color .3s ease-in-out, background-color .3s ease-in-out, border-color .3s ease-in-out, box-shadow .3s ease-in-out !default;
-
-// Cards
-
-$card-spacer-y:                     $spacer !default;
-$card-spacer-x:                     $spacer !default;
-$card-title-spacer-y:               $spacer * .5 !default;
-$card-border-width:                 1px !default;
-$card-border-radius:                $border-radius !default;
-$card-border-color:                 rgba(38, 38, 38, 0.8) !default;
-$card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
-$card-cap-padding-y:                $card-spacer-y * .5 !default;
-$card-cap-padding-x:                $card-spacer-x !default;
-$card-cap-bg:                       rgba(24, 24, 24, .1) !default;
-$card-cap-color:                    null !default;
-$card-height:                       null !default;
-$card-color:                        null !default;
-$card-bg:                           rgba(38, 38, 38, 0.3) !default;
-$card-img-overlay-padding:          $spacer !default;
 
 /// Breadcrumb
 
