--- a/src/assets/scss/_reboot.scss
+++ b/src/assets/scss/_reboot.scss
@@ -2,6 +2,7 @@
 
 html {
 	height: 100%;
+	overscroll-behavior-y: none;
 }
 
 body {
@@ -14,7 +15,7 @@ body {
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background: #1b1b1b;
+		background: #1f1f1f;
 	}
 
 	&::-webkit-scrollbar-button {
@@ -26,20 +27,9 @@ body {
 	}
 }
 
-.dark-mode {
-	$link-color: #e9e9e9;
-
-	body {
-		&::-webkit-scrollbar-thumb {
-			background: #121212;
-		}
-	}
-
-	a {
-		color: $link-color;
-
-		&:hover {
-			color: shift-color($link-color, $link-shade-percentage)
-		}
-	}
+.n-icon {
+	line-height: 1;
+	vertical-align: -.125em;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
