--- a/src/assets/scss/_reboot.scss
+++ b/src/assets/scss/_reboot.scss
@@ -15,7 +15,7 @@ body {
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background: #1f1f1f;
+		background-color: rgb(50, 50, 50);
 	}
 
 	&::-webkit-scrollbar-button {
