style: increase spacers number to 20

--- a/app/assets/scss/_variables.scss
+++ b/app/assets/scss/_variables.scss
@@ -97,7 +97,7 @@ $spacers: (
 	5: $spacer * 3,
 ) !default;
 
-@for $i from 6 through 16 {
+@for $i from 6 through 20 {
 	$spacers: map-merge($spacers, (
 		$i: (($i + 1rem) * 0.5)
 	))
@@ -138,7 +138,7 @@ $focus-ring-box-shadow: 0 2px $focus-ring-blur $focus-ring-width $focus-ring-col
 
 // Typography
 
-$font-family-sans-serif:      'Archivo', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif:      "Archivo", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
 $font-size-sm:                $font-size-base * .875 !default;
@@ -192,6 +192,9 @@ $form-select-focus-box-shadow:    null !default;
 // Navs
 
 $nav-link-transition:               color .3s ease-in-out, background-color .3s ease-in-out, border-color .3s ease-in-out !default;
+
+$nav-underline-gap:                 .875rem;
+$nav-underline-border-width:        .1rem;
 
 // Navbar
 
