--- a/app/assets/scss/_variables-dark.scss
+++ b/app/assets/scss/_variables-dark.scss
@@ -30,7 +30,7 @@ $danger-border-subtle-dark:         shade-color($danger, 40%) !default;
 $light-border-subtle-dark:          $gray-700 !default;
 $dark-border-subtle-dark:           $gray-800 !default;
 
-$body-color-dark:                   $gray-200 !default;
+$body-color-dark:                   $gray-100 !default;
 $body-bg-dark:                      rgb(14, 14, 14) !default;
 $body-emphasis-color-dark:          $gray-100 !default;
 $body-secondary-color-dark:         rgba($body-color-dark, .75) !default;
@@ -41,7 +41,7 @@ $emphasis-color-dark:               $white !default;
 $border-color-dark:                 $gray-900 !default;
 $border-color-translucent-dark:     rgba($white, .15) !default;
 $headings-color-dark:               #fff !default;
-$link-color-dark:                   tint-color($gray-200, 40%) !default;
+$link-color-dark:                   tint-color($primary, 40%) !default;
 $link-hover-color-dark:             shift-color($link-color-dark, -$link-shade-percentage) !default;
 $code-color-dark:                   tint-color($code-color, 40%) !default;
 
